--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "plugins/vised_marks"]
 	path = plugins/vised_marks
 	url = https://github.com/BUCANL/Vised-Marks.git
+[submodule "plugins/bids-matlab-tools"]
+	path = plugins/bids-matlab-tools
+	url = https://github.com/BUCANL/bids-matlab-tools.git
